Update publications etc.

--- a/content/publication/arc-2021/cite.bib
+++ b/content/publication/arc-2021/cite.bib
@@ -3,7 +3,7 @@
  address = {Cham},
  author = {Jörg Keller and Sebastian Litzinger and Christoph Kessler},
  booktitle = {Applied Reconfigurable Computing. Architectures, Tools, and Applications},
- doi = {https://doi.org/10.1007/978-3-030-79025-7_7},
+ doi = {10.1007/978-3-030-79025-7_7},
  editor = {Derrien, Steven and Hannig, Frank and Diniz, Pedro C. and Chillet, Daniel},
  isbn = {978-3-030-79025-7},
  pages = {93--107},
