--- a/content/publication/bwlquam-3/cite.bib
+++ b/content/publication/bwlquam-3/cite.bib
@@ -1,7 +1,7 @@
 @article{bwlquam3,
  abstract = {Abstract Terrorism is a scourge of humanity. Thousands of people were killed by terrorists in the last years. To understand the structure, information flow and leadership in terrorist cells is a must for all societies to prevent future attacks. Network theory can help to model such cells and to identify leading members therein. This contribution uses the graph theoretical approach as a basis and enriches it by an entropy-driven knowledge processing. After presenting the theoretical concept two terrorist cells, the one of the Bali attack and the one of the 9/11 attack, are analysed. The results are compared to those of other methods. A preview on the application of weighted networks and multi-nets complements the new findings.},
  author = {Wilhelm Rödder and Andreas Dellnitz and Ivan Gartner and Sebastian Litzinger},
- doi = {https://doi.org/10.1111/exsy.12720},
+ doi = {10.1111/exsy.12720},
  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/exsy.12720},
  journal = {Expert Systems},
  keywords = {9/11 attack, Bali attack, entropy, knowledge processing, network analysis, terrorism},
