--- a/content/publication/dissertation-2023/cite.bib
+++ b/content/publication/dissertation-2023/cite.bib
@@ -4,5 +4,6 @@
  title = {Raising Energy Efficiency and Fault Tolerance with Parallel Streaming Application Scheduling on Multicore Systems},
  type = {PhD dissertation},
  url = {https://doi.org/10.18445/20231102-135835-0},
+ doi = {10.18445/20231102-135835-0},
  year = {2023}
 }
