--- a/content/publication/jsspp-2021/cite.bib
+++ b/content/publication/jsspp-2021/cite.bib
@@ -3,7 +3,7 @@
  address = {Cham},
  author = {Christoph Kessler and Jörg Keller and Sebastian Litzinger},
  booktitle = {Job Scheduling Strategies for Parallel Processing},
- doi = {https://doi.org/10.1007/978-3-030-88224-2_9},
+ doi = {10.1007/978-3-030-88224-2_9},
  editor = {Dalibor Klusáček and Walfredo Cirne and Gonzalo P. Rodrigo},
  isbn = {978-3-030-88224-2},
  pages = {168--189},
