--- a/content/publication/resilience-2021/cite.bib
+++ b/content/publication/resilience-2021/cite.bib
@@ -3,7 +3,7 @@
  address = {Cham},
  author = {Keller, Jörg and Litzinger, Sebastian},
  booktitle = {Euro-Par 2021: Parallel Processing Workshops},
- doi = {https://doi.org/10.1007/978-3-031-06156-1_26},
+ doi = {10.1007/978-3-031-06156-1_26},
  editor = {Chaves, Ricardo and B. Heras, Dora and Ilic, Aleksandar and Unat, Didem and Badia, Rosa M. and Bracciali, Andrea and Diehl, Patrick and Dubey, Anshu and Sangyoon, Oh and L. Scott, Stephen and Ricci, Laura},
  isbn = {978-3-031-06156-1},
  pages = {322--333},
