Add recent publications, update cv.

--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,14 @@
+@article{jucs2024,
+author={Heßeling, Carina and Litzinger, Sebastian and Keller, Jörg},
+title={Archive-based Covert Channel in Sensor Streaming Data.},
+journal={JUCS - Journal of Universal Computer Science},
+volume={30},
+number={8},
+year={2024},
+pages={1048--1067},
+doi={10.3897/jucs.108811}
+}
+
 @inproceedings{sac2024,
 author = {Boulasikis, Michail and Kessler, Christoph and Gruian, Flavius and Keller, Jörg and Litzinger, Sebastian},
 title = {Packet-Type Aware Scheduling of Moldable Streaming Tasks on Multicore Systems with DVFS},
@@ -9,7 +20,7 @@ url = {https://doi.org/10.1145/3605098.3636081},
 doi = {10.1145/3605098.3636081},
 abstract = {We introduce a novel approach for energy-efficient scheduling of data-dependent stream programs with packet types on multicore architectures with voltage and frequency scaling. To have the given application meet specific throughput demands while minimizing energy consumption, we enhance the existing crown scheduling by packet-type dependent parameters. Formulation as an integer linear program generates a parametric, multi-scenario crown schedule for table-driven execution. By inspecting the packet stream at runtime, our online scheduler selects the appropriate schedule and handles frequency levels. The performance of our technique is compared to crown scheduling with synthetic stream programs. Our results demonstrate an average energy reduction of 23.94\%.},
 booktitle = {Proceedings of the 39th ACM/SIGAPP Symposium on Applied Computing},
-pages = {449–451},
+pages = {449--451},
 numpages = {3},
 location = {Avila, Spain},
 series = {SAC '24}
