Add recent talk, correct minor errors.

--- a/content/publication/jucs-2024/cite.bib
+++ b/content/publication/jucs-2024/cite.bib
@@ -1,6 +1,6 @@
 @article{jucs2024,
 author={Heßeling, Carina and Litzinger, Sebastian and Keller, Jörg},
-title={Archive-based Covert Channel in Sensor Streaming Data.},
+title={Archive-based Covert Channel in Sensor Streaming Data},
 journal={JUCS - Journal of Universal Computer Science},
 volume={30},
 number={8},
