Add latest publication.

--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,14 @@
+@inproceedings{fmec2024,
+  author={Khosravi, Sajad and Kessler, Christoph and Litzinger, Sebastian and Keller, Jörg},
+  booktitle={9th International Conference on Fog and Mobile Edge Computing (FMEC)}, 
+  title={Energy-Efficient Scheduling of Moldable Streaming Computations for the Edge-Cloud Continuum}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={268-276},
+  doi={10.1109/FMEC62297.2024.10710310}
+}
+
 @article{jucs2024,
 author={Heßeling, Carina and Litzinger, Sebastian and Keller, Jörg},
 title={Archive-based Covert Channel in Sensor Streaming Data.},
