Update publications, cv.

--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,14 @@
+@inproceedings{eicc2025,
+author="Keller, Jörg and Litzinger, Sebastian",
+title="Hiding Information in Short Network Packets",
+booktitle="Cybersecurity",
+year="2025",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="133--150",
+doi="10.1007/978-3-031-94855-8_9"
+}
+
 @inproceedings{fmec2024,
   author={Khosravi, Sajad and Kessler, Christoph and Litzinger, Sebastian and Keller, Jörg},
   booktitle={9th International Conference on Fog and Mobile Edge Computing (FMEC)}, 
