Add recent publications.

--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,13 @@
+@article{pars2024,
+  author = {Lena Oden and Sebastian Litzinger and Jörg Keller},
+  title = {Fast Compression of Floating-Point Values with Exponent/Mantissa Shuffling},
+  journal = {PARS-Mitteilungen},
+  volume = {37},
+  year = {2025},
+  pages = {71--82},
+  url = {https://dl.gi.de/server/api/core/bitstreams/32b75dd8-e088-4a4c-a691-6efe2b729768/content}
+}
+
 @inproceedings{eicc2025,
 author="Keller, Jörg and Litzinger, Sebastian",
 title="Hiding Information in Short Network Packets",
