Fix information update.

--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,12 @@
+@inproceedings{bcca2025,
+  author={Keller, Jörg and Uzunkol, Osmanbey and Litzinger, Sebastian},
+  booktitle={Proceedings of the 7th International Conference on Blockchain Computing and Applications (BCCA)}, 
+  title={Covert Channels in Redactable Blockchain}, 
+  year={2025},
+  pages={328--335},
+  doi={10.1109/BCCA66705.2025.11227178}
+}
+
 @article{pars2024,
   author = {Lena Oden and Sebastian Litzinger and Jörg Keller},
   title = {Fast Compression of Floating-Point Values with Exponent/Mantissa Shuffling},
