Update photo, update CV, update publications.

--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,48 @@
+@inproceedings{jsspp2026,
+author="Khosravi, Sajad
+and Litzinger, Sebastian
+and Kessler, Christoph
+and Keller, J{\"o}rg",
+editor="Klus{\'a}{\v{c}}ek, Dalibor
+and Corbal{\'a}n, Julita
+and Rodrigo, Gonzalo P.",
+title="Quality-Aware Energy-Efficient Scheduling of Moldable-Parallel Streaming Computations on Heterogeneous Multicore CPUs with DVFS",
+booktitle="Job Scheduling Strategies for Parallel Processing",
+year="2026",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="145--165",
+abstract="We solve the optimization problem of scheduling stream computations with parallelizable, multi-variant tasks onto a heterogeneous parallel system with DVFS, such that the overall energy consumption is minimized while maintaining a given throughput and a given quality for the results. We also explore the energy-quality tradeoff via a Pareto optimization of the multi-objective optimization problem. We provide a solution based on integer linear programming and a heuristic method, and evaluate these by scheduling synthetic task graphs as well as task graphs from real-world stream processing applications. The heuristic is 20{\%} to 25{\%} less effective than ILP but much faster (by 1 to 2 orders of magnitude). While ILP is slower for larger task graphs, it is better at finding feasible solutions.",
+doi="10.1007/978-3-032-10507-3_8"
+}
+
+@article{ccpe2026,
+author = {Keller, Jörg and Litzinger, Sebastian},
+title = {Parallel Algorithm for Approximate State Graph Exploration With Restricted Memory Footprint},
+journal = {Concurrency and Computation: Practice and Experience},
+volume = {38},
+number = {1},
+pages = {e70502},
+keywords = {approximate computing, parallel graph algorithm, state transition graph},
+doi = {10.1002/cpe.70502},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cpe.70502},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/cpe.70502},
+abstract = {ABSTRACT We investigate the performance of algorithms that explore large state graphs of finite state machines without input by following paths. To improve on anchor-based and candidate-based explorations and to avoid the performance overhead of full anchor lists and the tuning sensitivity of timeout-based methods, we propose and analyze exploration based on two combinations: two sets of candidate nodes and candidate nodes plus a restricted form of anchors. We confirm our analysis by experiments on a multicore machine: both combinations achieve similar performance, with slight differences depending on the input graph and with respect to accuracy of secondary information like the point of entry into the cycle. The method with two candidate sets provides accurate information also on the tail length, while the method with candidates and restricted anchors often yields best performance.},
+year = {2026}
+}
+
+@article{jnsm2026,
+author="Litzinger, Sebastian
+and Keller, J{\"o}rg
+and Caviglione, Luca",
+title="Optimization of Warden Network Functions for Mitigating Network Covert Channels",
+journal="Journal of Network and Systems Management",
+year="2026",
+volume="34",
+number="23",
+doi="10.1007/s10922-025-10000-x"
+}
+
 @inproceedings{bcca2025,
   author={Keller, Jörg and Uzunkol, Osmanbey and Litzinger, Sebastian},
   booktitle={Proceedings of the 7th International Conference on Blockchain Computing and Applications (BCCA)}, 
